--- a/src/Components/LoginSignUp/LoginSignUp.css
+++ b/src/Components/LoginSignUp/LoginSignUp.css
@@ -2,12 +2,12 @@
     display: flex;
     flex-direction: column;
     margin: auto;
-    margin-top: 200px;
+    margin-top: 105px;
     width: 600px;
     height: 100%;
     padding-bottom: 30px;
     background-color: #fff;
-    border-radius: 10px;
+    border-radius: 16px;
 }
 
 .header{
@@ -64,7 +64,7 @@
 }
 
 .forgot-password span{
-    color: black;
+    color: #7302ba;
     cursor: pointer;
 }
 
